<resources>
    <string name="app_name">Food Recipes App</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_setting">Setting</string>
    <string name="menu_share">Share</string>
    <string name="menu_contactus">ContactUs</string>
    <string name="menu_feedback">Feedback</string>
    <string name="food_recipes">FOOD RECIPES</string>
    <string name="explore_your_dream_foods_recipes">Explore Your Dream Foods Recipes</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="did_not_registered">Did Not Registered?</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="log_out">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_setting_fragment">Hello setting fragment</string>
    <string name="hello_share_fragment">Hello share fragment</string>
    <string name="hello_contactus_fragment">Hello contact us fragment</string>
    <string name="hello_feedback_fragment">Hello feedback fragment</string>
    <string name="dinner">DINNER</string>
    <string name="lunch">LUNCH</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="search">Search</string>
    <string name="search_your_favorite_recipe">Search Your Favorite Recipe</string>
    <string name="search_for_lunch_recipe">Search For Lunch Recipe</string>
    <string name="search_for_dinner_recipe">Search For Dinner Recipe</string>
    <string name="search_for_breakfast_recipe">Search For Breakfast Recipe</string>


</resources>