<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    tools:context=".LoginActivity">



    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/food_recipes"
        android:textColor="@color/teal_200"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtsignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textColor="@color/pink"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView" />



    <soup.neumorphism.NeumorphCardView
        android:id="@+id/CardUserEmail"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:neumorph_shapeType="pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtsignin"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="30sp">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_your_email"
            android:background="@null"
            android:padding="15dp"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="20sp" />
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/CardUserpassword"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:neumorph_shapeType="pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardUserEmail"
        app:layout_constraintWidth_percent=".8">

        <EditText
            android:id="@+id/edtpassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_your_password"
            android:background="@null"
            android:padding="15dp"
            android:textColor="@color/teal_200"
            android:textSize="20sp"
            android:drawableLeft="@drawable/baseline_vpn_key_24"
            android:drawablePadding="20sp" />
    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphButton
        android:id="@+id/btnsignin"
        android:layout_width="0dp"
        android:textAlignment="center"
        android:padding="16dp"
        android:layout_height="60sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:text="@string/sign_in"
        android:textSize="19sp"
        android:textColor="@color/teal_200"
        android:backgroundTint="@color/pink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtforgotpwd"/>

    <TextView
        android:id="@+id/txtforgotpwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardUserpassword"
        app:layout_constraintWidth_percent=".5" />


    <TextView
        android:id="@+id/txtregi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="110dp"
        android:text="@string/did_not_registered"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnsignin" />

    <TextView
        android:id="@+id/txtregi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginStart="10dp"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtregi2"
        app:layout_constraintTop_toTopOf="@+id/txtregi2" />

</androidx.constraintlayout.widget.ConstraintLayout>