<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <soup.neumorphism.NeumorphCardView
        android:id="@+id/neumorphCardView"
        android:layout_width="310dp"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:neumorph_shapeType="pressed">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:drawableLeft="@drawable/baseline_search_24"
            android:gravity="center"
            android:padding="9dp"
            android:text="Search Your Favorite Recipe"
            android:textColor="@color/teal_200" />

    </soup.neumorphism.NeumorphCardView>


    <soup.neumorphism.NeumorphButton
        android:id="@+id/neumorphButton"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:padding="30dp"
        android:drawableTint="@color/teal_200"
        android:drawableStart="@drawable/baseline_arrow_forward_24"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/neumorphCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/neumorphCardView"
        app:layout_constraintTop_toTopOf="@+id/neumorphCardView"
        app:neumorph_shapeType="flat" />

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/cardViewBreakfast"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <soup.neumorphism.NeumorphTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"
                    android:textColor="@color/teal_200"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/cardViewLunch"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewBreakfast">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <soup.neumorphism.NeumorphTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lunch"
                    android:textColor="@color/teal_200"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


        </soup.neumorphism.NeumorphCardView>


        <soup.neumorphism.NeumorphCardView
            android:id="@+id/cardViewDinner"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewLunch" >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <soup.neumorphism.NeumorphTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dinner"
                    android:textColor="@color/teal_200"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </soup.neumorphism.NeumorphCardView>





</androidx.constraintlayout.widget.ConstraintLayout>